include/fitpack_surface_c.h

/**
 * @brief Borrow the storage of allocatable array component 't'.
 *
 * @param self    Object handle
 * @param ptr     Receives the address of the first element, or NULL when the
 *                object or the component is unallocated (also NULL for an
 *                allocated but zero-sized component).
 * @param extents Receives the component's 2 extent(s); all zero when the
 *                component is unallocated.
 *
 * @note The elements are laid out COLUMN-MAJOR (Fortran order): extents[0] is
 *       the leading (fastest-varying) extent, so element (i, j) — zero-based —
 *       lives at ptr[i + j * extents[0]].
 * @note The pointer is borrowed, not owned: it is invalidated by any fitting,
 *       assignment or destroy call on the object. Do not free it, and re-read
 *       it after every call that can reallocate the component.
 */
FITPACK_CAPI_EXPORT void fitpack_surface_c_getcomp_t(const fitpack_surface_c* self, double** ptr, int64_t extents[2]);
/* ===========================================================================================
 * Scalar Property Accessors
 * =========================================================================================== */

FITPACK_CAPI_EXPORT int32_t* fitpack_surface_c_ref_m(const fitpack_surface_c* self);
FITPACK_CAPI_EXPORT int32_t* fitpack_surface_c_ref_nmax(const fitpack_surface_c* self);
FITPACK_CAPI_EXPORT int32_t* fitpack_surface_c_ref_lwrk2(const fitpack_surface_c* self);
FITPACK_CAPI_EXPORT int32_t* fitpack_surface_c_ref_bc(const fitpack_surface_c* self);