src/capi/fitpack_surfaces_c.f90


    !> Raw view of component 't': address of the first element, plus
    !> the component's 2 extent(s). Null pointer and zero extents when the
    !> object or the component is unallocated; an allocated but zero-sized
    !> component still reports its true shape, but has no representable address.
    !> Symbol uses the `getcomp_` infix (not `get_`) so it can never collide
    !> with a type-bound procedure named `get_<component>`.
    subroutine fitpack_surface_c_getcomp_t(this, ptr, extents) &
        bind(C, name='fitpack_surface_c_getcomp_t')
        type(fitpack_surface_c), intent(in) :: this
        type(c_ptr), intent(out) :: ptr
        integer(c_int64_t), intent(out) :: extents(2)
        type(fitpack_surface), pointer :: fthis

        ptr = c_null_ptr
        extents = 0_c_int64_t
        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (allocated(fthis%t)) then
                extents = int(shape(fthis%t), kind=c_int64_t)
                if (size(fthis%t) > 0) ptr = c_loc(fthis%t)
            end if
        end if
    end subroutine fitpack_surface_c_getcomp_t

    ! ===========================================================================================
    ! SECTION 9: Scalar Property Accessors
    ! ===========================================================================================

    !> Get pointer to scalar property 'm'
    type(c_ptr) function fitpack_surface_c_ref_m(this) &
        bind(C, name='fitpack_surface_c_ref_m')
        type(fitpack_surface_c), intent(in) :: this
        type(fitpack_surface), pointer :: fthis
        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_surface_c_ref_m = c_loc(fthis%m)
        else
            fitpack_surface_c_ref_m = c_null_ptr
        end if
    end function fitpack_surface_c_ref_m

    !> Get pointer to scalar property 'nmax'
    type(c_ptr) function fitpack_surface_c_ref_nmax(this) &
        bind(C, name='fitpack_surface_c_ref_nmax')
        type(fitpack_surface_c), intent(in) :: this
        type(fitpack_surface), pointer :: fthis
        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_surface_c_ref_nmax = c_loc(fthis%nmax)
        else
            fitpack_surface_c_ref_nmax = c_null_ptr
        end if
    end function fitpack_surface_c_ref_nmax

    !> Get pointer to scalar property 'lwrk2'
    type(c_ptr) function fitpack_surface_c_ref_lwrk2(this) &
        bind(C, name='fitpack_surface_c_ref_lwrk2')
        type(fitpack_surface_c), intent(in) :: this
        type(fitpack_surface), pointer :: fthis
        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_surface_c_ref_lwrk2 = c_loc(fthis%lwrk2)
        else
            fitpack_surface_c_ref_lwrk2 = c_null_ptr
        end if
    end function fitpack_surface_c_ref_lwrk2

    !> Get pointer to scalar property 'bc'
    type(c_ptr) function fitpack_surface_c_ref_bc(this) &
        bind(C, name='fitpack_surface_c_ref_bc')
        type(fitpack_surface_c), intent(in) :: this
        type(fitpack_surface), pointer :: fthis
        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_surface_c_ref_bc = c_loc(fthis%bc)
        else
            fitpack_surface_c_ref_bc = c_null_ptr
        end if
    end function fitpack_surface_c_ref_bc

end module fitpack_surfaces_c
